@@ -2354,6 +2354,7 @@ innobase_change_buffering_inited_ok:
 
   /* Get the current high water mark format. */
   innobase_file_format_check = (char*) trx_sys_file_format_max_get();
+  btr_search_fully_disabled = (!btr_search_enabled);
 
   return(FALSE);
 error:
