@@ -192,6 +192,12 @@ btr_search_validate(void);
 Protected by btr_search_latch and btr_search_enabled_mutex. */
 extern bool btr_search_enabled;
 
+/** Flag: whether the search system has completed its disabling process,
+t is set to TRUE right after buf_pool_drop_hash_index() in
+btr_search_disable(), indicating hash index entries are cleaned up.
+Protected by btr_search_latch and btr_search_enabled_mutex. */
+extern ibool	btr_search_fully_disabled;
+
 /** The search info struct in an index */
 struct btr_search_struct{
 	ulint	ref_count;	/*!< Number of blocks in this index tree
